fix(head): overwrite overflow for this section

--- a/applications/dxb/head/src/templates/systemDetails/styles/imageGallerySection.module.scss
+++ b/applications/dxb/head/src/templates/systemDetails/styles/imageGallerySection.module.scss
@@ -1,6 +1,9 @@
 @import "@bmi/styles";
 
 @media (min-width: $breakpoint-md) {
+  .imageGallery-section {
+    overflow: initial;
+  }
   .gallery {
     position: sticky;
     top: 175px;
